# python_magnetunits

./: .gitignore  README.md  pyproject.toml
examples/: basic_material_usage.py  basic_usage.py  integration_usage.py
prompts/: ARCHITECTURE_DIAGRAM.md  CHANGES_APPLIED.md  MIGRATION_GUIDE.md  REFACTORING_PLAN.md  example_field_implementation.py  example_registry_implementation.py  review_report.md
python_magnetunits/: __init__.py  converters.py  field.py  field_types.py  registry.py
python_magnetunits/compat/: magnetrun.py
python_magnetunits/field_definitions/: material_properties.py
python_magnetunits/formats/: __init__.py  format_definition.py
python_magnetunits/physics/: __init__.py  electromagnetic.py  electromagnetism.py  hydraulics.py  mechanical.py  thermal.py
scripts/: validate_compatibility.py
tests/: __init__.py  test_converters.py  test_field.py  test_field_types.py  test_field_with_field_type.py  test_formats.py  test_registry.py
